minecraft-stack/filebrowser/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: minecraft-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - minecraft-server # Ensure this pod deploys on the same node as the minecraft-server pod so they can share a longhorn pvc with ReadWriteOnce access mode.
              topologyKey: "kubernetes.io/hostname"  
      containers:
        - name: filebrowser
          image: hurlenko/filebrowser
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: datadir
              mountPath: /data
            - name: config
              mountPath: /config
            - name: mc-data
              mountPath: /data/mc
            - name: jar-explorer-data
              mountPath: /data/jar-explorer
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: filebrowser-config-pvc
        - name: datadir
          persistentVolumeClaim:
            claimName: filebrowser-database-pvc
        - name: mc-data
          persistentVolumeClaim:
            claimName: minecraft-server-config-pvc
        - name: jar-explorer-data
          persistentVolumeClaim:
            claimName: jar-explorer-config-pvc
