minecraft-stack/filebrowser/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
  namespace: minecraft-stack
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
